Tue Feb 18 12:06:39 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in (FILE_COUNT): Removed.  (win32.c defines it in itself.)
	  (FILE_READPTR): Ditto.

Tue Feb 18 09:35:44 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test/psych/test_string.rb: remove unused variables.
	* test/test/psych/test_yaml.rb: ditto.

Mon Feb 17 21:31:31 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb: ignore warning messages for running with -w
	  option such as chkbuild.

Mon Feb 17 20:00:27 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h: Move BDIGIT and related definitions from
	  include/ruby/defines.h.

Mon Feb 17 17:41:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (marshal_dump, marshal_load): do not recycle wrapper
	  objects, to prevent from segfault with continuation.
	  [ruby-dev:47970] [Bug #9523]

Mon Feb 17 15:43:59 2014  Zachary Scott  <e@zzak.io>

	* doc/keywords.rdoc: [DOC] Add keywords doc by documenting-ruby/ruby#29
	  https://github.com/documenting-ruby/ruby/pull/29

Mon Feb 17 12:31:31 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (get_envparam_double): fix a warning message.

Mon Feb 17 12:09:52 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce new environment variable
	  "RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR" to control major/minor GC
	  frequency.

	  Do full GC when the number of old objects is more than R * N
	  where R is this factor and
                N is the number of old objects just after last full GC.

	* test/ruby/test_gc.rb: add a test.

Mon Feb 17 11:28:40 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_pty.rb: ignore warnings to unused variables.

Mon Feb 17 11:27:36 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_find.rb: remove unused variables.

Sun Feb 17 02:12:00 2014  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_initialize): Insert GC guard.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_global_new): ditto.
